--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -61,27 +61,30 @@
 +AxisConfig=(AxisKeyName="ValveIndex_Right_Trackpad_Force",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 bAltEnterTogglesFullscreen=True
 bF11TogglesFullscreen=True
-bUseMouseForTouch=False
+bUseMouseForTouch=True
 bEnableMouseSmoothing=True
 bEnableFOVScaling=True
-bCaptureMouseOnLaunch=True
+bCaptureMouseOnLaunch=False
 bEnableLegacyInputScales=True
-bAlwaysShowTouchInterface=False
+bAlwaysShowTouchInterface=True
 bShowConsoleOnFourFingerTap=True
-bEnableGestureRecognizer=False
+bEnableGestureRecognizer=True
 bUseAutocorrect=False
-DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
-DefaultViewportMouseLockMode=LockOnCapture
+DefaultViewportMouseCaptureMode=NoCapture
+DefaultViewportMouseLockMode=DoNotLock
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="MoveLeft",Scale=1.000000,Key=Left)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="MoveLeft",Scale=-1.000000,Key=Right)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Gamepad_LeftY)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
-DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
+DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 
