--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -146,9 +146,13 @@ VisualizeCalibrationGrayscaleMaterialPath=/Engine/EngineMaterials/PPM_DefaultCal
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.BNR.[PROJECT]
 bPackageDataInsideApk=True
+ApplicationDisplayName=The Great Adventure of Lucid
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GameInstanceClass=/Script/Engine.GameInstance
+
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Mobile
 
