--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=936A13754FF81CC14125EE9DBD0BC228
+ProjectName=The Great Adventure of Lucid
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
