--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=936A13754FF81CC14125EE9DBD0BC228
 ProjectName=The Great Adventure of Lucid
+ProjectVersion=1.3.0.0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
